developed multi animations and improved the typography of the sitet

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Vazirmatn:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 :root {
   --foreground-rgb: 0, 0, 0;
@@ -17,11 +18,29 @@
 }
 
 body {
+
+
+  .p-carousel .p-carousel-indicators .p-carousel-indicator button {
+    width: 11px;
+    border-radius: 999px;
+    height: 11px;
+    background-color: #ced4da;
+    transition: background-color 0.2s, color 0.2s, box-shadow 0.2s;
+  }
+
+  .p-carousel .p-carousel-indicators .p-carousel-indicator.p-highlight button {
+    background-color: #EBDAB2;
+    border-radius: 999px;
+    width: 73px;
+    height: 11px;
+  }
+
+  .p-link:focus {
+    box-shadow: none;
+  }
+
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: linear-gradient(to bottom,
+    transparent,
+    rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
 }
