--- a/components/HeroSection/HeroSection.module.scss
+++ b/components/HeroSection/HeroSection.module.scss
@@ -35,3 +35,17 @@
         transform: translateY(0px);
     }
 }
+
+
+.HeroSection__rightSide {
+    @media screen and (max-width: 2300px) {
+        flex: 2;
+    }
+}
+
+.HeroSection__video {
+    transform: translateY(-100px);
+    @media screen and (max-width: 1280px) {
+        transform: none;
+    }
+}
