--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,6 +19,18 @@
 
 body {
 
+  .z-minus {
+    z-index: -1;
+  }
+
+  .rtl {
+    direction: rtl;
+  }
+
+  .m-t-minus80 {
+    margin-top: -120px;
+  }
+
   .p-carousel .p-carousel-content .p-carousel-prev,
   .p-carousel .p-carousel-content .p-carousel-next {
     background-color: #EBDAB2;
