fixed some other bugs and improvements

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,6 +24,29 @@ body {
     text-align: right;
   }
 
+  .swiper {
+    width: 100%;
+    height: 100%;
+  }
+
+  .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+
+    /* Center slide text vertically */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
   .p-button .p-button-label {
     font-family: '__Vazirmatn_253970';
     font-weight: 400;
